chore: alternative fix for hidden scrollbar

--- a/assets/css/scrollbars.css
+++ b/assets/css/scrollbars.css
@@ -19,6 +19,10 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
 
+.custom-scrollbar-hidden {
+  scrollbar-width: none;
+}
+
 .custom-scrollbar-hidden::-webkit-scrollbar {
   width: 0;
   height: 0;
